included CH comments to CH3 CS WP, 2nd half

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -193,10 +193,6 @@ When CU status was assessed using the multidimensional scanning tool with lower 
 
 Overall, the proportion of CUs with red status differed between the multidimensional approach and the single metric approach of looking at status relative to lower benchmarks in only 2 or 3 of 21 years, depending on the Ricker model formulation. 
 
-<!--
-CH comment: The proportion of CUs with red status was more sensitive to Ricker model formulation than to if the multi-dimensional or single metric approach was applied." Is this all true? 
-KH response: I don't understand this last bit right now.
--->
 
 
 ```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had multi-dimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -253,7 +249,7 @@ All three logistic regression-based LRP methods were able to converge on a solut
 ```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the integrated Logistic:Sgen-Ricker LRP model using data from 1998 - 2020. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs (MLE estimates only; no confidence intervals) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho-IM2020-LogisticLRP.png")
 ```
-  
+  <!--CH: maybe I should use the same colouring for LRPs at 50, 66, 90, 99. Can you let me know what colours those are?-->
   
 When the Logistic:Sgen-Ricker model was used, aggregate abundance-based LRPs ranged from 15,395 to 24,331 spawners, depending on whether the required probability of all CUs being above Sgen was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher $S_{gen}$ values for most CUs under this alternative model formulation resulted in more historical years in which < 100% of CUs were above $S_{gen}$. Several years with aggregate abundances between 19,000 - 30,000 spawners that had met the threshold of all CUs > $S_{gen}$ using the Ricker model no longer met this threshold, resulting in a shift of the fit curve to the right and higher LRP estimates. LRPs based on the Logistic:Sgen_priorCap model ranged from 25,677 to 40,637 spawners, depending on whether the required probability of all CUs being above Sgen was moderate (50%) or very likely (99%).  
 
@@ -288,7 +284,7 @@ Table: (\#tab:logisticLRPs2020) Aggregate abundance based LRPs (with 95% confide
 
 ***Logistic Regression Diagnostics***
 
-Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table @ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of influential <!--CH; suggest removing influenctial. We didn't assess this--> outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure @ref(fig:coho-logisticACF-IM)). The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table @ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of influential <!--CH; suggest removing influential. We didn't assess this--> outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure @ref(fig:coho-logisticACF-IM)). The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 
 +-------------------------+--------------+-------------------+-----------------+
 | Diagnostic Test         | Sgen-Ricker  | Sgen-priorCap     | IFCRT
@@ -525,7 +521,7 @@ In addition to the LRP estimation methods presented so far in this case study, w
 
 In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2006 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Abund: Logistic: Sgen-Ricker; Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all  LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (Prop: Scanner-Ricker, Abund: Logistic: Sgen-Ricker, and Abund: Proj: Sgen-Ricker; the first group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2015-2017 under the Prop: Scanner-Ricker method. Both of the aggregate abundance-based methods estimated status to remain above the LRP over this period. This result is due to the Prop method using the rapid multidimensional scanning tool to assess CU status rather than a direct comparison of CU-level abundance to $S_gen$. The decision tree for the rapid scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.  
+Comparison of SMU status estimates over time for all LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (Prop: Scanner-Ricker, Abund: Logistic: Sgen-Ricker, and Abund: Proj: Sgen-Ricker; the first group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2015-2017 under the Prop: Scanner-Ricker method. Both of the aggregate abundance-based methods estimated status to remain above the LRP over this period. This result is due to the Prop method using the rapid multidimensional scanning tool to assess CU status rather than a direct comparison of CU-level abundance to $S_gen$.  The decision tree for the rapid scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.  <!--CH: perhaps we should have a version of this fig in the appendix, with Prop: SingleMetric-Ricker, in case reviewers are not happy with Multdimensional status?  Not sure...-->
 
 In the years 2005-2006, SMU status estimates from the 'Abund: Proj: Sgen-Ricker' method fell below the LRP, while the other two Sgen-Ricker methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual $S_{gen}$ estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach.  
 
@@ -545,15 +541,15 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 
 Discussion topic 1: What are the unique characteristics of this case study that can inform the development of guidelines
 
-- Data rich SMU; while the number of years of data are limited, full SR time series are available for all 5 CUs.  These have previoulsy been used to develop forward simulations for individual CUs within the SMU.
+- Data rich SMU; while the number of years of data are limited, full SR time series are available for all 5 CUs.  These have previously been used to develop forward simulations for individual CUs within the SMU.
 - Long history of using aggregate abundance-based recovery targets and fisheries reference points that were developed based on an underlying relationship between aggregate abundance and the distribution of abundance among sub-populations and CUs. As a result, it was well suited to looking at the application of aggregate abundance-based LRPs, as well as how they compared historically to the preferred proportional approach.
 
 
 Discussion topic 2: How well do aggregate abundance-based LRPs perform retrospectively compared to proportional LRPs using the scanner tool?
 
-- The abundance-based methods we considered often matched the proportional methods in a historical comparison of SMU status relative to LRPs. For a given assumption about SR model structure, LRPs tended to be triggered in similar periods of times under the aggregate abudnance-based and proportional options; however, there were some differences.
+- The abundance-based methods we considered often matched the proportional methods in a historical comparison of SMU status relative to LRPs. For a given assumption about SR model structure, LRPs tended to be triggered in similar periods of times under the aggregate abundance-based and proportional options; however, there were some differences.
 - Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportional based ones.  For example, when estimates of Sgen were obtained using the base Ricker model, aggregate abundance-based LRPs were slightly less precautionary than using proprtional estimates using the scanner tool because the scanner tool used additional decision criteria based on minimum levels of absolute CU abundance. However, when estimates of Sgen were obtained using the Ricker_priorCap model, which produced higher estimates than the Ricker model, aggregate-based abundance LRPs were more precautionary than the proportional method; especially when aggregate abundance-based LRPs were estimated using the Projection-based LRP approach.  In this case, there were years in which aggregate abundance dropped below the LRP, but all CUs remained above red status using the mutli-dimensional tool.
-- Note that we also could have looked at logistic regression-based LRPs in which historical CU status was estimated based on the multi-dimensional decision tool rather than status relative to Sgen. This would have allowed for an evaluation of the relationship between multi-dimensional status and aggregate abundance for Interior Fraser Coho, which would have be useful given the recommendation to use multidimensional status estimates to characterize CU status for proportional LRPs (Holt et al. in review). Future work to support implementation of aggregate abundance-based LRPs should consider this approach when evaluating whether there is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above red status in order to support the development of aggregate-abundance based LRPs.
+- Note that we also could have looked at logistic regression-based LRPs in which historical CU status was estimated based on the multi-dimensional decision tool rather than status relative to Sgen. This would have allowed for an evaluation of the relationship between multi-dimensional status and aggregate abundance for Interior Fraser Coho, which would have be useful given the recommendation to use multidimensional status estimates to characterize CU status for proportional LRPs (Holt et al. in review). Future work to support implementation of aggregate abundance-based LRPs should consider this approach when evaluating whether there is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above red status in order to support the development of aggregate-abundance based LRPs. <!--CH: One challenge in applying statuses based on the Multidimenstional Tool to development of aggregate-abundance based LRPs is that the component metrics in the Tool includes short and long-term trends which are independent of aggregate status. This misalignment of underlying metrics will increase uncertainty in aggregate-abundance based LRPs developed from Multidimensional status, and may not be suitable-->
 <!--
 Question: is there are strong need to estimate logistic regression-based LRPs that characterize CU status based on multi-dimensional status as part of this coho case study? In our current approach, we characterize CU status based simply on abundance relative to Sgen.
 -->
@@ -569,16 +565,18 @@ Discussion topic 3: Importance of SR model choice in characterizing SMU status i
 
 Discussion topic 4: What was learned from retrospective analysis of logistic regression-based methods?
 
-- Retrospective analyses of logistic regression-based LRP options showed that LRPs were sensitive to data availability. 2015 was the first year that that regression-based LRPs could be estimated, indicating that at least 18 years of data were required. (Although, note that the Logistic regression with the Base Ricker model could not estimate an LRP until 2017, so required 20 years of data).  However, slight shifts in Sgen estimates in some years meant that logistic models were sometimes unable to converge on a solution even with more data. 
-- For years in which LRPs could be estimated, LRP estimates did vary over time; especially when Sgen was estimated each year within an integrated modelling framework.  LRP estimates were more stable when CU status was based on the IFCRT recovery target of at least half of all sub-populations within a CU having more than 1000 fish.  This result is likely because estimated CU status in a given historic year were not changing annually in the same way the did in the integrated Sgen-logistic regression model fits.
-- Missing data scenarios, in which 1 or 2 CUs were removed from the data set, highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures' in the data used as inputs to the logistic regression. Estimates of aggregate SMU status, characterized as generational mean escapement / LRP, were also sensitive to the combination of CUs used. Removal of one or two influencial CUs often resulted in very different characterizations of CU status. 
+- Retrospective analyses of logistic regression-based LRP options showed that LRPs were sensitive to data availability. 2015 was the first year that that regression-based LRPs could be estimated, <!--CH remind me why. Is it b/c model didn't converge with shorter time series, or we said that a min # of yrs was required for SR analyses...  And if model model convergence was the problem was this because there were no years of failures, no overlap between successes and failures ,or something else?-->indicating that at least 18 years of data were required. (Although, note that the Logistic regression with the Base Ricker model could not estimate an LRP until 2017, so required 20 years of data).  However, slight shifts in Sgen estimates in some years meant that logistic models were sometimes unable to converge on a solution even with more data. 
+- For years in which LRPs could be estimated, LRP estimates did vary over time; especially when Sgen was estimated each year within an integrated modelling framework.  LRP estimates were more stable when CU status was based on the IFCRT recovery target of at least half of all sub-populations within a CU having more than 1000 fish.  This result is likely because estimated CU status <!--CH: CU-level SR parameters and lower benchmarks?-->in a given historic year were not changing annually in the same way the did in the integrated Sgen-logistic regression model fits.
+- Missing data scenarios, in which 1 or 2 CUs were removed from the data set, highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures' in the data used as inputs to the logistic regression. Estimates of aggregate SMU status, characterized as generational mean escapement / LRP, were also sensitive to the combination of CUs used. Removal of one or two influencial CUs often resulted in very different characterizations of CU status.<!--CH: see my comments on the Results section for this about possible generalizations--> 
 - Taken together, these retrospective results highlight that caution should be used when applying logistic regression-based LRPs. While they did provide similar estimates of SMU status as proportion-based methods using the rapid multidimesional scanning tool for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data becomes available to improve the statistical power of logistic regression fits.
-
+<!--CH: I suggest adding mention of if these CUs fit the criteria for representativeness from Guildeslines paper-->
 
 Discussion topic 5: What we learned from sensitivity analysis of projection-based methods?
 
 - Projection-based LRPs were higher, and therefore more precautionary, than logistic regression-based LRPs when forward projections were parameterized using base case parameters.  Given that the estimation of logistic regression-based LRPs were sensitive to data availability, projection-based LRPs may provide more reliable estimates for cases in which population and fishery dynamics can be modelled.
 - Projection-based LRPs also have the advantage of being able to incorporate hypotheses about current population and / or fishery dynamics into forward projections, whereas logistic regression-based LRPs are constrained by conditions that have been previously experienced.
 - The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, it made sense to set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above Sgen given a specified fixed ER policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above Sgen could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above Sgen. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix).
+<!--CH: therefore these LRPs are not static measures of serious harm, as commonly developed for other stocks/species-->
 - Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens. Projected LRPs therefore have a built-in buffer that will help avoid the situation where aggregate abundance remains above the LRP despite several CUs having poor realized status.
 
+<!--CH: I think projection-based LRPs are also sensitivity to differences in size/capacity of component CUs. I guess this is shown somewhat in the Appendix on sens to ER, where I kept SREP constant or varying. If it comes up in the review we can point participants there-->
