--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -24,7 +24,7 @@ Benchmarks based on spawner recruit relationships are unreliable if there is unc
 We chose the ISC-NF Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and logistic regression based on aggregate abundance. For proportions, we used percentile benchmarks and multi-dimensional status assessment to determine the status of component CUs. For the logistic regressions, we used percentile *\textcolor{cyan}{and $S_{gen}$ - should I leave out Sgen here, or leave in and then say that we dropped it due to unreliable stock-recruit data and/or poor logistic fits}*.
 
 <!--
-    CW: I think there is value in saying that we attempted to use Sgen but that i was not possible due to data limitations. -- this will likely be true for other SMus. 
+    CW: I think there is value in saying that we attempted to use Sgen but that it was not possible due to data limitations. -- this will likely be true for other SMus. 
     -->
 
 ```{r chum-map, fig.cap="The seven Conservation Units that make up the Inside South Coast Chum Stock Management Unit (not including Lower Fraser and Fraser Canyon Conservation Units).", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -38,12 +38,19 @@ We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updat
 
 ## METHODS
 
+<!-- 
+    I'm not sure we need a methods section here. But I am in favour of including the github link.
+-->
+
 Data and methods are available at: https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval.
 
 <!-- K.H. comment: Have we checked with Pieter on whether he is ok with Chum data being publically accessible on github?  We should make sure we have approval from him via email.
 -->
 
 ### Determining the Status of Conservation Units
+<!--
+    Is this section equivalent to the "## CU STATUS ESTIMATION" in IFcoho chapter? 
+-->
 
 For this case study, we consider two approaches for characterizing CU status: (i) percentile benchmarks and (ii) multi-dimensional status assessment (@pestalAlgorithmsRapidStatus2021, in prep).  *\textcolor{orange}{KH: as discussed, I think it makes sense to take out Sgen as a benchmark to evaluate; however, in light of your note about the SR data still being used for assessing patterns in productivity, we should flag this as something to discuss more with Carrie}*
 
@@ -60,9 +67,8 @@ There are studies showing that a range of factors may affect the productivity of
 Sue Grant comment: How is this different from any other salmon population, they are all affected by these conditions, and particularly right now so many are declining, so this is a fairly common issue, so should be mentioned more ina  broader context at the start and how to address this across all approaches
 Response: Agreed. Can move this to intro and / or discussion to put into broader context.
 
-CW: On the guidelines paper we have a section on the effects of time-varying productivity on  LRPs. We could move some of this discussion there. However, I think there might value in leaving some text here indicating that there are suspect changes in productivity for ISC chum. 
+CW: On the guidelines paper we have a section on the effects of time-varying productivity on  LRPs. We could move some of this discussion there. However, I think there might value in leaving some text here indicating that there are suspected changes in productivity for ISC chum. 
 
-Something like:
 
 
 -->
@@ -165,6 +171,19 @@ In applying the multi-dimensional rapid status assessment to ISC Chum, we used t
 
 ### LRP Estimation for ISC-NF Chum
 
+<!--
+CW: I suggest we re structure this sectio so that it is consistent with the IFcoho chapter, 
+With the following headings:
+
+## LRP ESTIMATION: PROPORTION OF CUS
+### Methods
+### Results
+## LRP ESTIMATION: AGGREGATE ABUNDANCE LOGISTIC REGRESSION LRPS
+ No methods and results, just mention that the method was not applicable. 
+## Discussion
+
+-->
+
 
 **LRPs Based on Proportion of CU Status**
 
@@ -175,12 +194,12 @@ We evaluated six different combinations of data and LRP methods (table \@ref(tab
 
 <!-- CW: I think I need a little bit more explanation on the methods used here.
 
-So what we are saying is that the benchmark was set to a percentile of the raw annual escapement values? or percentile of the geometric means? 
-Or are we saying that we compared the raw numbers and geometric means to the benchmarks to determine status? Or both? 
+What is the percentile based on? percentile of the raw annual escapement values? or percentile of the geometric means? 
+Or are we saying that we compared the raw numbers and geometric means to the percentile benchmarks to determine status? Or both? 
 
 So scenarios 3-6 used relative abundances instead of full abundances? Is that the difference? 
 
-Also, we may need to define the acronyms in the table below. I would also like to know what is the rationale behing each scenario. i.e. why did we include SCS full data on scenario 4 but excluded it from scenario 6?
+Also, we may need to define the acronyms in the table below. I would also like to know what is the rationale behind each scenario. i.e. why did we include SCS full data on scenario 4 but excluded it from scenario 6?
 
 
 -->
@@ -197,9 +216,16 @@ csasdown::csas_table(d[1:6,c(3,6:12)],
 
 
 **LRPs Based on Aggregate Abundance and Logistic Regression**
-
+<!-- CW: I think we need to review the level of section titles here
+    for IF coho the title for this section is 
+ ## LRP ESTIMATION:  AGGREGATE ABUNDANCE LOGISTIC REGRESSION LRPS
+-->
 
 We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile and $S_{gen}$ benchmarks. These methods used 5 CUs with over 50 years of data (Bute Inlet and Upper Knight both had CU-level infilling in recent years and thus were left out of this analysis).
+
+<!-- 
+   CW:refer to chapter 2 for a description of the methods.
+    CW: If the method did not perform well for the full time series, why did we do the retrospective analysis? I am a bit confused here.  -->
 
 These methods were applied retrospectively. For a series of years up to a given year, the benchmarks and logistic regressions were calculated with all years up to that year. This was done for all successive years to see how the LRP (and benchmarks, and underlying stock-recruit parameters) would have changed over time as more data was collected.
 
@@ -386,7 +412,10 @@ The CUs that required CU-level infilling (Upper Knight and Bute Inlet) were not 
 ### Other sources of information to inform LRPs / benchmarks
 
 
-<!-- Maybe this can be moved to the general discussion? As these are not particular to the Chum study case? -->
+<!-- CW: Maybe this can be moved to the general discussion? As these are not particular to the Chum study case? 
+Could include it as a paragraph in future research? e.g. consider the two-eyed seeing approach to explicitly consider indigenous knowledge when setting reference points. 
+
+-->
 Indigenous Knowledge
 
 - Two-Eyed Seeing - Etuaptmumk(Mi’kmaw) @reidTwoEyedSeeingIndigenous2020
