--- a/guidelinesWP/index.Rmd
+++ b/guidelinesWP/index.Rmd
@@ -3,9 +3,10 @@ title: "Guidelines for Defining Limit Reference Points for Pacific Salmon Stock 
 author: |
   Carrie. A. Holt^1^
   Kendra Holt^2^
-  Luke Warkentin^1^ and
+  Luke Warkentin^1^ 
+  Catarina Wor^1^ and
   others (TBD)^2^
-author_list: "Holt, C.A., Holt, K., Warkentin, L., and others(TBD)"
+author_list: "Holt, C.A., Holt, K., Warkentin, L., Wor, C. and others(TBD)"
 address: |
   ^1^Pacific Biological Station\
      Fisheries and Oceans Canada, 3190 Hammond Bay Road\
