--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -5,6 +5,8 @@
 -	In this section, we provide a brief description of each case study and associated LRPs.  
 -	More thorough descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, are available in a separate research document, A Case Study Application of LRP Estimation Methods to Pacific Salmon SMUs.
 
+- add density plot (or box plot or violin plot) of distribution of between-CU spawner correlations for the 3 case studies.
+
 ##	Interior Fraser Coho
 
 ##	West Coast Vancouver Island Chinook
