add text on multidimensional logistic reg

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -216,6 +216,7 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 
 We evaluated aggregate abundance-based LRPs derived using logistic regressions with two of the Interior Fraser Coho benchmarks considered<!--Is it too much to consider the multidimensional approach too? It's hard to justify why we excluded it-->: $S_{gen}$ and the IFCRT-distributional target. Because two different spawner recuit models were used to estimate $S_{gen}$, we distinguish these models as 'Logistic:Sgen-Ricker' and 'Logistic:Sgen-priorCap' for the Ricker and Ricker_priorCap models, respectively. We use the label 'Logistic:IFCRT' to denote the case in which the IFCRT distributional target was used to develop an LRP.  See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
 
+
 When estimating logistic regression LRPs using $S_{gen}$, we used an integrated modelling approach in which CU-level $S_{gen}$ and the SMU-level LRP were simultaneously estimated. The integrated Sgen-LRP models had two components:  
 
 (i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level Sgen (Equation \@ref(eq:rickerSurv-IM) and Equations \@ref(eq:adjProd) - \@ref(eq:Sgen))  
@@ -227,11 +228,10 @@ CW: Comments on logistic regression-based LRP based on multi-dimensinal status -
 Not sure if we want to introduce this here. Or even if  we want to exclude the multidimensional status result. I think it may be unnecessary to include the plots of the poor fitting results (but these could be included in an appendix, if you think it would be beneficial, perhaps with the chum fits as well?). 
 
 
+A third version of the logistic regression model, using the status assessments obtained with the multidimensional rapid status assessment tool was considered, but initial model evaluations led to the exclusion of that version of the logistic model. Two main reasons were the basis for this decision. First, the multidimensional rapid status assessment tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks. For this reason, there was a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean for the logistical regression fit introduced considerable autocorrelation in the abundance time series, which is a direct violation of the logistic regression assumptions.  Future explorations of aggregate abundance logitic regression-based LRPs based on the multidimensional rapid status assessment tool could account for the auto-correlation by including an AR(1) covariace structure. However, longer time-series and a wider spread of the data would be required to compensate for the additonal parameter in the model.    
 
-We also evaluated the logistic regression-based LRP based on the results from the multidimensional rapid status assessment tool, however a couple points led to the exclusion of this method. 
 
-First, the multidimensional rapid status assessment tool relies on generational mean to assess status of individual CU against benchmarks. We found that considering the generation mean as an indicator of aggregate abundance introduces considerable autocorrelation in the abundance time series which is a direct violation of the logistic regression assumptions. 
-Second, the multidimensional rapid status assessment tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and CU status, even when there is high correlation between CUs. For example, a small CU may be above its specific Sgen but below the 1500 fish absolute threshold, this can lead to a red LRP status despite higher aggregate abundances. This disconnect was observed in preliminary exploration of logistic regression-based LRPs based on the multidimensional rapid status assessments results for the IF coho study case.   
+Second, the multidimensional rapid status assessment tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the multidimensional rapid status assessment tool can also rely on absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs. For example, a small CU may be above its specific Sgen but below the absolute threshold, this can lead to a red LRP status despite higher aggregate abundances. 
 
 -->
 
