edit text on multidimensional logistic reg

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -224,14 +224,9 @@ When estimating logistic regression LRPs using $S_{gen}$, we used an integrated 
 (ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above Sgen (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
 
 <!--
-CW: Comments on logistic regression-based LRP based on multi-dimensinal status -- 
-Not sure if we want to introduce this here. Or even if  we want to exclude the multidimensional status result. I think it may be unnecessary to include the plots of the poor fitting results (but these could be included in an appendix, if you think it would be beneficial, perhaps with the chum fits as well?). 
 
 
-A third version of the logistic regression model, using the status assessments obtained with the multidimensional rapid status assessment tool was considered, but initial model evaluations led to the exclusion of that version of the logistic model. Two main reasons were the basis for this decision. First, the multidimensional rapid status assessment tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks. For this reason, there was a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean for the logistical regression fit introduced considerable autocorrelation in the abundance time series, which is a direct violation of the logistic regression assumptions.  Future explorations of aggregate abundance logitic regression-based LRPs based on the multidimensional rapid status assessment tool could account for the auto-correlation by including an AR(1) covariace structure. However, longer time-series and a wider spread of the data would be required to compensate for the additonal parameter in the model.    
-
-
-Second, the multidimensional rapid status assessment tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the multidimensional rapid status assessment tool can also rely on absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs. For example, a small CU may be above its specific Sgen but below the absolute threshold, this can lead to a red LRP status despite higher aggregate abundances. 
+A third version of the logistic regression model, using the status assessments obtained with the multidimensional rapid status assessment tool was considered, but initial model evaluations led to the exclusion of that version of the logistic model. Two main reasons were the basis for this decision. First, the multidimensional rapid status assessment tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks. For this reason, there was a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean for the logistical regression fit introduced considerable autocorrelation in the abundance time series, which is a direct violation of the logistic regression assumptions.  Future explorations of aggregate abundance logitic regression-based LRPs based on the multidimensional rapid status assessment tool could account for the auto-correlation by including an AR(1) covariace structure. However, longer time-series and a wider spread of the data would be required to compensate for the additonal parameter in the model. Second, the multidimensional rapid status assessment tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the multidimensional rapid status assessment tool can also rely on absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs. For example, a small CU may be above its specific Sgen but below the absolute threshold, this can lead to a red LRP status despite higher aggregate abundances. 
 
 -->
 
