--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -226,8 +226,8 @@ When estimating logistic regression LRPs using $S_{gen}$, we used an integrated 
 <!--
 
 
-A third version of the logistic regression model, using the status assessments from the multidimensional rapid status assessment tool was considered, but initial model evaluations led to the exclusion of that version. Two main reasons were the basis for this decision. First, the multidimensional rapid status assessment tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks. For this reason, there was a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean for the logistical regression fit introduced considerable auto-correlation in the abundance time series, which is a direct violation of the logistic regression assumptions.  Future explorations of aggregate abundance logistic regression-based LRPs based on the multidimensional rapid status assessment tool could account for the auto-correlation by including an AR(1) covariace structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model.
- Second, the multidimensional rapid status assessment tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the multidimensional rapid status assessment tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be but below the absolute threshold despite high aggregate abundances.
+A third version of the logistic regression model, using the status assessments from the rapid multidimensional scanning tool was considered, but initial model evaluations led to the exclusion of that version. Two main reasons were the basis for this decision. First, the rapid multidimensional scanning tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks. For this reason, there was a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean for the logistical regression fit introduced considerable auto-correlation in the abundance time series, which is a direct violation of the logistic regression assumptions.  Future explorations of aggregate abundance logistic regression-based LRPs based on the rapid multidimensional scanning tool could account for the auto-correlation by including an AR(1) covariace structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model.
+ Second, the rapid multidimensional scanning tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the rapid multidimensional scanning tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
 
 
  
